Fixed an issue where the next arrow overlaped the cards

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,7 @@ header > h1 {
   position:relative;
   -webkit-perspective:3000;
   perspective:3000;
+  z-index: 100;
 }
 
 .flip-container, .card-front, .card-back, .card-front-name, .card-loading {
@@ -139,6 +140,7 @@ header > h1 {
   opacity: 1;
   cursor: pointer;
   color:  #E9CAA0;
+  z-index: 0;
 }
 
 @media (max-width: 768px) {
@@ -200,7 +202,7 @@ header > h1 {
   width: auto;
   padding:0 10px;
   border-bottom: none;
-  margin-bottom: 0; 
+  margin-bottom: 0;
 }
 
 .btn-filter {
